Added some extra filtering for orders
